--- a/AngularClient/src/app/Ticket/worklist/assigned-to-me/assigned-to-me.component.html
+++ b/AngularClient/src/app/Ticket/worklist/assigned-to-me/assigned-to-me.component.html
@@ -1,7 +1,7 @@
 <app-color-datatable [tableData]="AssignedToMe" [columns]="[
     {colName:'Raised By',colData:'raisedBy'},
     {colName:'Ticket No',colData:'ticketId'},
-    {colName:'Ticket Date',colData:'createdOn'},
+    {colName:'Ticket Date',colData:'createdOn',isDate:true},
     {colName:'Ticket Title',colData:'title'},
     {colName:'Assigned To',colData:'assignedToName'},
     {colName:'Ticket Status',colData:'ticketStatus'},
