--- a/AngularClient/src/app/Common/user/user/user.component.html
+++ b/AngularClient/src/app/Common/user/user/user.component.html
@@ -23,7 +23,7 @@
 
 
 
-<app-pagination [EnablePageSize]="true" [rowData]="UserMasterlist"
+<!-- <app-pagination [EnablePageSize]="true" [rowData]="UserMasterlist"
     (pageSizeChanged)="handlePageSizeChange($event)"></app-pagination>
 <app-color-table
     [columns]="[
@@ -46,7 +46,7 @@
 
 
 <app-pagination [EnableNavigation]="true" [rowData]="UserMasterlist"
-    (pageSizeChanged)="handlePageSizeChange($event)"></app-pagination>
+    (pageSizeChanged)="handlePageSizeChange($event)"></app-pagination> -->
 
 <ng-template #userListModal let-modal>
 
