--- a/AngularClient/src/app/Ticket/worklist/assigned-to-me/assigned-to-me.component.html
+++ b/AngularClient/src/app/Ticket/worklist/assigned-to-me/assigned-to-me.component.html
@@ -6,11 +6,11 @@
     {colName:'Assigned To',colData:'assignedToName'},
     {colName:'Ticket Status',colData:'ticketStatus'},
     {colName:'Company',colData:'companyName'},
-    {colName:'Target Date',colData:'targetDate'},
-    {colName:'Last Action',colData:'modifiedOn'}
+    {colName:'Target Date',colData:'targetDate',isDate:true},
+    {colName:'Last Action',colData:'modifiedOn',isDate:true}
     ]"
     [enableActionColumn]="true"
     [actionColumnLabel]="'Action'"
     [actionOptions]="[{actionName: 'View', actionIcon: 'fa fa-eye '}]"
-    (actionClick)="handleActionClick($event)"
+    (actionClick)="handleActionClick($event)" [enableExports]="true"
     ></app-color-datatable>
