--- a/AngularClient/src/app/shared/pdf-generator/pdf-generator.component.html
+++ b/AngularClient/src/app/shared/pdf-generator/pdf-generator.component.html
@@ -1,22 +1,23 @@
-<button class="btn btn-sm btn-outline-danger" (click)="startGenerating()" *ngIf="!loading">Generate PDF<i class="bi bi-filetype-pdf ml-1"></i></button>
-<button class="btn btn-sm btn-outline-danger" *ngIf="loading">Generating PDF...</button>
-<button class="btn btn-sm btn-outline-danger" (click)="printTable()">Print</button>
-<button class="btn btn-sm btn-outline-danger" (click)="exportToExcel()">export to excel</button>
+    <button class="btn btn-sm btn-outline-danger ml-2" (click)="startGenerating()" *ngIf="!loading">Export PDF
+        <i class="bi bi-file-earmark-pdf-fill ml-1"></i></button>
+    <button class="btn btn-sm btn-outline-danger ml-2" *ngIf="loading">Generating PDF...</button>
+    <button class="btn btn-sm btn-outline-primary ml-2" (click)="printTable()">Print <i class="bi bi-printer-fill ml-1"></i></button>
+    <button class="btn btn-sm btn-outline-success ml-2" (click)="exportToExcel()">Export Excel <i class="bi bi-file-earmark-excel-fill ml-1"></i></button>
 
-<div #dataTable style="display:none;"> 
+<div #dataTable style="display:none;">
     <table class="table table-bordered com_table  mb-0" style="width: 100%;" #tableRef>
         <thead>
             <tr class="text-dark" style="border-left: 5px solid var(--orange-col);">
                 <th scope="col">SrNo</th>
-             
+
                 <th scope="col" *ngFor="let col of columns">
-                  {{ col.colName }}
+                    {{ col.colName }}
                 </th>
             </tr>
         </thead>
         <tbody id="TemplateListBody">
             <ng-container>
-    
+
                 <tr *ngFor="let rows of data; let i = index">
                     <td>{{i+1}}</td>
                     <td *ngFor="let col of columns">
