--- a/AngularClient/src/app/Ticket/worklist/worklist.component.html
+++ b/AngularClient/src/app/Ticket/worklist/worklist.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="d-flex align-items-center justify-content-between my-3" style="border-bottom:1px solid #CDD5E9">
         <div class="main-heading">User WorkList- <h3 style="color: darkblue; display: inline-block;"
-                id="UserWorklistTypeTitle">Work in Progress</h3>
+                id="UserWorklistTypeTitle">{{title}}</h3>
         </div>
     </div>
     <div>
@@ -9,13 +9,12 @@
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="TabularViewDiv" role="tabpanel">
                 <!--Tabs-->
-                <div class="nav nav-tabs tra_tab" id="nav-tab" role="tablist"
-                    onmouseout="window.dispatchEvent(new Event('resize'));">
-                    <a routerLinkActive="active" routerLink="work-in-progress">Work in progress</a>
-                    <a routerLinkActive="active" routerLink="assigned-to-me">Assigned to me</a>
-                    <a routerLinkActive="active" routerLink="open-tickets">Open Tickets</a>
-                    <a routerLinkActive="active" routerLink="closed-tickets">Closed Tickets</a>
-                    <a routerLinkActive="active" routerLink="assigned-to-others">Assigned to Others</a>
+                <div class="nav nav-tabs tra_tab" id="nav-tab" role="tablist">
+                    <a routerLinkActive="active" routerLink="work-in-progress" (click)="changeTitle('Work in progress')">Work in progress</a>
+                    <a routerLinkActive="active" routerLink="assigned-to-me" (click)="changeTitle('Assigned to me')">Assigned to me</a>
+                    <a routerLinkActive="active" routerLink="open-tickets" (click)="changeTitle('Open Tickets')">Open Tickets</a>
+                    <a routerLinkActive="active" routerLink="closed-tickets" (click)="changeTitle('Closed Tickets')">Closed Tickets</a>
+                    <a routerLinkActive="active" routerLink="assigned-to-others" (click)="changeTitle('Assigned to Others')">Assigned to Others</a>
                 </div>
 
                 <div class="tab-content" id="nav-tabContent">
