--- a/AngularClient/src/app/shared/color-datatable/color-datatable.component.html
+++ b/AngularClient/src/app/shared/color-datatable/color-datatable.component.html
@@ -15,7 +15,7 @@
     <button class="btn btn-sm btn-outline-success" (click)="printTable()">Print <i class="bi bi-filetype-pdf"></i></button> -->
     <!-- parent.component.html -->
     <ng-container *ngIf="enableExports">
-      <app-pdf-generator [pdfFileName]="'generated-pdf'" [data]="tableData" [columns]="columns"></app-pdf-generator>
+      <app-pdf-generator [pdfFileName]="'TechnoTechERP'" [data]="tableData" [columns]="columns"></app-pdf-generator>
     </ng-container>
 
   </div>
