--- a/AngularClient/src/app/Ticket/create-ticket/in-progress/in-progress.component.html
+++ b/AngularClient/src/app/Ticket/create-ticket/in-progress/in-progress.component.html
@@ -1,4 +1,4 @@
-<app-color-datatable [tableData]="activeTickets" [columns]="[
+<app-color-datatable [tableData]="inprogressTickets" [columns]="[
 {colName:'Raised By',colData:'raisedBy'},
 {colName:'Ticket No',colData:'ticketId'},
 {colName:'Ticket Title',colData:'title'},
