--- a/AngularClient/src/app/shared/loader/loader.component.html
+++ b/AngularClient/src/app/shared/loader/loader.component.html
@@ -15,7 +15,7 @@
   
         <div class="loader_body">
           <span class="loader"></span>
-          <img src="../../../assets/loader_logo.svg" alt="loader_image">
+          <img src="../../../assets/vnc.png" alt="loader_image">
         </div>
         
       </body>
