--- a/AngularClient/src/app/shared/loader/loader.component.scss
+++ b/AngularClient/src/app/shared/loader/loader.component.scss
@@ -67,7 +67,7 @@ body {
     width: 80px;
     height: 80px;
     border: 3px solid #FFF;
-    border-bottom-color: #F24800;
+    border-bottom-color: #1c34a4;
     border-radius: 50%;
     display: inline-block;
     box-sizing: border-box;
