--- a/AngularClient/src/app/salesLead/lead-worklist/close-leads/close-leads.component.html
+++ b/AngularClient/src/app/salesLead/lead-worklist/close-leads/close-leads.component.html
@@ -1,6 +1,24 @@
+
+<form class="d-flex mb-4" [formGroup]="dateForm">
+    <div class=" d-flex align-items-center">
+        <div>Start Date: </div>
+        <div>
+            <input type="date" class="form-control form-control-sm ml-2" formControlName="startDate">
+        </div>
+    </div>
+    <div class=" d-flex align-items-center ml-4">
+        <div>End Date: </div>
+        <div>
+            <input type="date" class="form-control form-control-sm ml-2" formControlName="endDate">
+        </div>
+    </div>
+    <div class="ml-4">
+        <button class="btn btn-primary btn-sm" (click)="LoadDataWithDate()">Load Data</button>
+    </div>
+</form>
 <app-color-datatable
 [loading]="dataTableLoading" 
-[tableData]="SalesList"
+[tableData]="closedLeads"
 [enableActionColumn]="true"
 (actionClick)="handleActionClick($event)"
 [actionOptions]="[
