--- a/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
+++ b/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
@@ -5,7 +5,7 @@
                 <div class="col">
                     <span id="headerTicketStatus">{{leadDetail.leadStatus}}</span>
                     <span id="headerTicketId">#{{leadDetail.leadId}}</span>
-                    <span id="headerTicketTitle">{{leadDetail.lTitle}}dsfsdsdfsdf</span>
+                    <span id="headerTicketTitle">{{leadDetail.lTitle}}</span>
                 </div>
                 <div class="col-auto"><a href="#" class="btn btn-secondary btn-sm rounded"> <i
                             class="far fa-eye-slash me-1"></i> Unwatch</a></div>
@@ -18,7 +18,7 @@
                         <div class="col">
                             <div class="mb-1"><span id="detailTicketPriority">{{leadDetail.leadPriority}}</span>
                                 Priority
-                                <span id="detailTicketType">####</span> Problem
+                                 Lead
                             </div>
                             <div class="d-flex mb-1">
                                 <div class="font-b me-2">Assigned To :</div>
@@ -55,42 +55,42 @@
                         <td><span id="detailTicketRaisedByContactNo">{{leadDetail.addField3}}</span></td>
                     </tr>
                     <tr>
-                        <th>Created Date</th>
-                        <td><span id="detailTicketTargetDate">{{leadDetail.leadDate}}</span></td>
+                        <th>Lead Date</th>
+                        <td><span id="detailTicketTargetDate">{{returnFormattedDate(leadDetail.leadDate)}}</span></td>
                     </tr>
                     <tr>
                         <th>Next FollowUp Date</th>
                         <td><span
-                                id="detailTicketResolutionDate">{{leadDetail.nextFollowUpDate}}</span>
+                                id="detailTicketResolutionDate">{{returnFormattedDate(leadDetail.nextFollowUpDate)}}</span>
                         </td>
                     </tr>
                     <tr>
                         <th>Updated By</th>
-                        <td><span id="detailTicketUpdatedBy">{{leadDetail.modifiedBy}}</span></td>
+                        <td><span id="detailTicketUpdatedBy">{{GetUserNameById(leadDetail.modifiedBy)}}</span></td>
                     </tr>
                     <tr>
                         <th>Updated Date</th>
-                        <td><span id="detailTicketUpdatedOn">{{leadDetail.modifiedOn}}</span></td>
+                        <td><span id="detailTicketUpdatedOn">{{returnFormattedDate(leadDetail.modifiedOn)}}</span></td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <th>Work Start Date</th>
                         <td><span id="detailTicketStartOn">-</span></td>
-                    </tr>
+                    </tr> -->
                     <tr>
                         <th>Created By</th>
                         <td><span id="detailTicketCreatedBy">{{leadDetail.leadOwner}}</span></td>
                     </tr>
                     <tr>
-                        <th>Created Date</th>
-                        <td><span id="detailTicketCreatedOn">{{leadDetail.createdOn}}</span></td>
+                        <th>AddField1/th>
+                        <td><span id="detailTicketCreatedOn">{{leadDetail.addField1}}</span></td>
                     </tr>
                     <tr>
-                        <th>Estimate Duration</th>
-                        <td><span id="detailTicketEstimatedDuration">####</span></td>
+                        <th>AddField2</th>
+                        <td><span id="detailTicketEstimatedDuration">{{leadDetail.addField2}}</span></td>
                     </tr>
                     <tr>
-                        <th>Actual Duration</th>
-                        <td><span id="detailTicketActualDuration">####</span></td>
+                        <th>AddField3</th>
+                        <td><span id="detailTicketActualDuration">{{leadDetail.addField3}}</span></td>
                     </tr>
                     <tr>
                         <th>Subscribers</th>
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="btn-group" role="group" aria-label="Basic outlined example">
-                    <ng-container *ngIf="leadDetail.leadStatus != 'Close'">
+                    <ng-container *ngIf="(leadDetail.leadStatus != 'Close') && (leadDetail.leadStatus != 'Success')">
 
                         <button type="button" id="TicketCommentBtn" class="btn btn-outline-primary btn-sm"
                             (click)="toggleCommentDialogOnClick()">Comment</button>
@@ -119,9 +119,9 @@
                         <button type="button" id="TicketAssignBtn" class="btn btn-outline-primary btn-sm"
                             (click)="AssignTicketToUserOnClick()">Assign To</button>
                         <button type="button" id="TicketForceCloseBtn" class="btn btn-outline-primary btn-sm"
-                            (click)="SupportTicket_Forceclose()">Force Close</button>
+                            (click)="SalesLead_Forceclose()">Force Close</button>
                         <button type="button" id="TicketEditBtn" class="btn btn-outline-primary btn-sm"
-                            (click)="OpenEditTicketModal()">Edit</button>
+                            (click)="OpenEditLeadModal()">Edit</button>
                     </ng-container>
                         <ng-container *ngIf="leadDetail.leadStatus == 'Close'|| leadDetail.leadStatus == 'Success'">
                             <button type="button" id="TicketReOpenBtn" class="btn btn-outline-primary btn-sm"
@@ -185,25 +185,21 @@
                                 <label>Assign To</label>
                                 <select class="form-control" id="assignToList" formControlName="assignedTo">
                                     <option value="0">Please Select...</option>
-                                    <option *ngFor="let user of assigneeList" [value]="user.lAId">
+                                    <option *ngFor="let user of leadResolverList" [value]="user.userId">{{user.name}}
                                     </option>
                                 </select>
                                 <!-- <div *ngIf="assigneeCrl.invalid && assigneeCrl.touched">
                                     <p style="color: red;">Required</p>
                                 </div> -->
                             </div>
-                            <div class="col-md-1">
-                                <label>Description</label>
-                                <input id="TicketAsigneeWorkRatio" class="form-control" type="number" max="100" min="0"
-                                    value="100" formControlName="description" />
-                            </div>
+
                             <div class="col-md-6">
                                 <label>Description</label><br />
-                                <input id="TicketAsigneeDescription" class="form-control" formControlName="ticketAsigneeDescription" />
+                                <input  class="form-control" formControlName="aDesc" />
                             </div>
                             <div class="col-md-2">
                                 <br />
-                                <button class="btn btn-primary btn-sm mt-2" (click)="TicketAsigneeSaveAsignee()"
+                                <button class="btn btn-primary btn-sm mt-2" (click)="LeadAsigneeSaveAsignee()"
                                     id="TicketAsigneeSaveUpdateBtn"> Save</button>
                                 <button class="btn btn-sm mt-2 ml-2" (click)="assignTicketToUserDivVisible  = false"
                                     style="outline:1px solid grey;"> Cancel</button>
@@ -221,7 +217,6 @@
                                 <tr class="text-dark">
                                     <th style="border-left: 5px solid var(--orange-col);" scope="col">Sr No</th>
                                     <th scope="col">Assigned To</th>
-                                    <th scope="col">Work Ratio</th>
                                     <th scope="col">Description</th>
                                     <th scope="col">Assigned By</th>
                                     <th scope="col">Current Status</th>
@@ -229,27 +224,33 @@
                                 </tr>
                             </thead>
                             <tbody id="TicketAsigneeListBody">
-                                <ng-container *ngIf="true;else loader">
+                                <ng-container *ngIf="!LeadAssigneeTableLoading;else loader">
                                     <ng-container *ngIf="assigneeList.length > 0; else noRecords">
-                                        <tr *ngFor="let ticketAsignee of assigneeList; let i = index"
+                                        <tr *ngFor="let leadAsignee of assigneeList; let i = index"
                                             [style.border-left]="'5px solid #' + WCColors[i % WCColors.length]">
                                             <td>{{i+1}}</td>
-                                            <td>{{ticketAsignee.lAId}} </td>
-                                            <td>{{ticketAsignee.aDesc}} </td>
-                                            <td>{{ticketAsignee.aStatus}} </td>
-                                            <td></td>
-                                            <td></td>
+                                            <td>{{GetUserNameById(leadAsignee.assignedTo)}} </td>
+                                            <td>{{leadAsignee.aDesc}} </td>
+                                            <td>{{GetUserNameById(leadAsignee.createdBy)}} </td>
                                             <td>
                                                 <button class="btn btn-primary btn-sm mt-2"
-                                                    
-                                                    *ngIf="ticketAsignee.aStatus === 'Open' || ticketAsignee.aStatus === 'Hold'">
+                                                    (click)="LeadAsigneeStartTask(leadAsignee)"
+                                                    *ngIf="leadAsignee.aStatus === 'Open' || leadAsignee.aStatus === 'Hold'">
                                                     Start</button>
                                                 <button class="btn btn-info btn-sm mt-2"
-                                                    *ngIf="ticketAsignee.aStatus === 'InProgress'">
+                                                (click)="LeadAsigneeCloseTask(leadAsignee)"
+
+                                                    *ngIf="leadAsignee.aStatus === 'InProgress'">
                                                     Close</button>
-                                                <button class="btn btn-warning btn-sm mt-2"
-                                                    *ngIf="ticketAsignee.aStatus === 'InProgress'">
-                                                    Hold</button>
+                                                <button class="btn btn-success btn-sm mt-2 ml-2"
+                                                (click)="LeadAsigneeSuccessTask(leadAsignee)"
+                                                    *ngIf="leadAsignee.aStatus === 'InProgress'">
+                                                    Success</button>
+                                                    <!-- <button class="btn btn-warning btn-sm mt-2  ml-2"
+                                                (click)="LeadAsigneeHoldTask(leadAsignee)"
+                                                    *ngIf="leadAsignee.aStatus === 'InProgress'">
+                                                    Hold</button> -->
+                                                    <ng-container *ngIf="leadAsignee.aStatus === 'Success'">{{leadAsignee.aStatus}}</ng-container>
                                             </td>
                                             <td class="text-center">
                                                 <div class="btn-group dots_dropdown">
@@ -307,7 +308,7 @@
             <ng-container *ngIf="!activityLoading;else activityLoader">
                 <div class="card mb-3" *ngFor="let activity of leadActivity">
                     <div class="card-header">
-                        <div><b>{{activity.createdBy}}</b></div>
+                        <div><b>{{GetUserNameById(activity.createdBy)}}</b></div>
                         <small class="text-muted">{{activity.createdOn | date:'medium'}}</small>
                     </div>
                     <div class="card-body" [innerHTML]="returnSanitizedDom(activity.leadComments)">
@@ -436,4 +437,128 @@
             </table>
         </div>
     </div>
+</ng-template>
+
+
+<ng-template #CreateLeadModal>
+    <div class="modal-header text-light" style="background-color: #01018f;">
+        <h5 class="modal-title font-weight-bold" id="WorkflowInstructionsModalLabel">Update Lead</h5>
+        <button type="button" class="close text-light" aria-label="Close" data-dismiss="modal"
+            (click)="LeadModal.close()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <form [formGroup]="leadForm">
+            <div class="form-row">
+                <!-- <div class="form-group col-md-4">
+                    <label for="project">Company Name <span
+                        style="color: red;">*</span></label>
+                    <select class="form-control" id="project" formControlName="companyId">
+                        <option value="0">Select Company...</option>
+                        <option *ngFor="let company of CompanyList" [value]="company.companyId">{{company.cName}}</option>
+                    </select>
+                    <div *ngIf="companyIdCtrl.invalid && companyIdCtrl.touched">
+                        <p style="color: red;">Company is Required, Please Select</p>
+                    </div>
+                </div> -->
+                <div class="form-group col-md-4">
+                    <label for="project">Project Name<span style="color: red;">*</span></label>
+                    <select class="form-control" id="project" formControlName="projectId">
+                        <option [value]="0">Default</option>
+                        <option *ngFor="let project of ProjectList" [value]="project.projectId">{{project.pName}}</option>
+                    </select>
+                    <div class="text-danger" *ngIf="(projectIdCtrl.touched && projectIdCtrl.invalid )">
+                        <ng-container *ngIf="projectIdCtrl.errors"> Please select a project</ng-container>
+                    </div>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="title">Lead Name<span style="color: red;">*</span></label>
+                    <input type="text" class="form-control" id="title" formControlName="lTitle">
+                    <div class="text-danger" *ngIf="(lTitleCtrl.touched && lTitleCtrl.invalid )">
+                        <ng-container *ngIf="lTitleCtrl.errors"> Lead Name is required</ng-container>
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="category">Category</label>
+                    <select class="form-control" id="category" formControlName="category">
+                        <option value="Retailer">Retailer</option>
+                        <option value="Wholesaler">Wholesaler</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="priority">Lead Priority</label>
+                    <select class="form-control" id="priority" formControlName="leadPriority">
+                        <option>High</option>
+                        <option>Medium</option>
+                        <option>Low</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="ticketType">Lead Status</label>
+                    <select class="form-control" id="ticketType" formControlName="leadStatus">
+                        <option>New</option>
+                        <option>Open</option>
+                        <option>InProgress</option>
+                        <option>Close</option>
+                        <option>Success</option>
+                    </select>
+                </div>
+
+            </div>
+            <div class="form-row">
+
+                <div class="form-group col-md-4">
+                    <label for="targetDate">Lead Date</label>
+                    <input type="date" class="form-control" id="leadDate" formControlName="leadDate" (change)="leadDateChanged($event)">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="targetDate">Next Follow Up Date</label>
+                    <input type="date" class="form-control" id="leadDate" formControlName="nextFollowUpDate">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="tags">Tag List</label>
+                    <input type="text" class="form-control" id="tags" formControlName="tagList">
+                </div>
+
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="AddField1">addField1</label>
+                    <input type="text" class="form-control" id="department" formControlName="addField1">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="AddField2">addField2 By </label>
+                    <input type="text" class="form-control" id="raisedBy" formControlName="addField2">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="AddField2">addField3</label>
+                    <input type="text" class="form-control" id="raisedByContactNo" formControlName="addField3">
+                </div>
+            </div>
+            <!-- <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="AddField1">Lead Owner</label>
+                    <input type="text" class="form-control" id="department" formControlName="leadOwner">
+                </div>
+            </div> -->
+            <label>Lead Description</label>
+            <div class="form-row">
+                <app-rich-text-editor #editor2 (submit)="LeadUpdate($event)" [setRTEHtml]="leadDetail.lDesc">
+                    <button type="button" class="btn btn-sm btn-secondary my-2 ml-2" id="SupportTicketCloseBtn" data-dismiss="modal"
+                    (click)="LeadModal.close()">Close</button>
+                </app-rich-text-editor>
+            </div>
+
+
+        </form>
+    </div>
+    <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-sm btn-secondary" id="SupportTicketCloseBtn" data-dismiss="modal"
+            (click)="ticketModal.close()">Close</button>
+        <button type="button" class="btn btn-primary" id="SupportTicketSaveBtn" (click)="TicketUpdate()">Create
+            Ticket</button>
+    </div> -->
 </ng-template>
