--- a/AngularClient/src/app/salesLead/lead-details/lead-details.component.scss
+++ b/AngularClient/src/app/salesLead/lead-details/lead-details.component.scss
@@ -10,7 +10,7 @@ body {padding: 0; margin: 0; font-size: 14px; color: #303e3d;}
 
 .font-b {font-weight: bold;}
 
-.tick_topband {background-color: #303e3d; padding: 10px;}
+.tick_topband {background-color: #007b44; padding: 10px;}
 .tick_topband span {display: inline-block; padding: 0 20px; border-right: 1px solid #666; color: white;}
 .tick_topband span:last-child {border-right: none;}
 .side_status {background-color: rgba(48, 62, 61, 0.05); border-left: 1px solid #ccc;}
