--- a/AngularClient/src/app/salesLead/lead-worklist/lead-in-progress/lead-in-progress.component.html
+++ b/AngularClient/src/app/salesLead/lead-worklist/lead-in-progress/lead-in-progress.component.html
@@ -1,8 +1,8 @@
-<app-color-datatable 
-[tableData]="SalesList"
+<app-color-datatable
+[loading]="dataTableLoading" 
+[tableData]="LeadData"
 [enableActionColumn]="true"
 (actionClick)="handleActionClick($event)"
-
 [actionOptions]="[
     { actionName: 'View',actionIcon: 'fa fa-eye' },
     ]"
