--- a/AngularClient/src/app/salesLead/lead-worklist/close-leads/close-leads.component.html
+++ b/AngularClient/src/app/salesLead/lead-worklist/close-leads/close-leads.component.html
@@ -21,6 +21,7 @@
 [tableData]="closedLeads"
 [enableActionColumn]="true"
 (actionClick)="handleActionClick($event)"
+[enableExports]="true"
 [actionOptions]="[
     { actionName: 'View',actionIcon: 'fa fa-eye' },
     ]"
