--- a/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
+++ b/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
@@ -482,10 +482,26 @@
             </div>
             <div class="form-row">
                 <div class="form-group col-md-4">
+                    <label for="AddField1">Contact No.</label>
+                    <input type="text" class="form-control" id="department" formControlName="addField1">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="AddField2">Address</label>
+                    <textarea type="text" class="form-control" id="raisedBy" formControlName="addField2"></textarea>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="AddField2">Email</label>
+                    <input type="text" class="form-control" id="raisedByContactNo" formControlName="addField3">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
                     <label for="category">Category</label>
                     <select class="form-control" id="category" formControlName="category">
                         <option value="Retailer">Retailer</option>
                         <option value="Wholesaler">Wholesaler</option>
+                        <option value="Manufacturer">Manufacturer</option>
+                        <option value="Service">Service</option>
                     </select>
                 </div>
                 <div class="form-group col-md-4">
@@ -524,20 +540,7 @@
                 </div>
 
             </div>
-            <div class="form-row">
-                <div class="form-group col-md-4">
-                    <label for="AddField1">addField1</label>
-                    <input type="text" class="form-control" id="department" formControlName="addField1">
-                </div>
-                <div class="form-group col-md-4">
-                    <label for="AddField2">addField2 By </label>
-                    <input type="text" class="form-control" id="raisedBy" formControlName="addField2">
-                </div>
-                <div class="form-group col-md-4">
-                    <label for="AddField2">addField3</label>
-                    <input type="text" class="form-control" id="raisedByContactNo" formControlName="addField3">
-                </div>
-            </div>
+
             <!-- <div class="form-row">
                 <div class="form-group col-md-4">
                     <label for="AddField1">Lead Owner</label>
