lead detail fix

--- a/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
+++ b/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
@@ -81,15 +81,15 @@
                         <td><span id="detailTicketCreatedBy">{{leadDetail.leadOwner}}</span></td>
                     </tr>
                     <tr>
-                        <th>AddField1/th>
+                        <th>Contact No.</th>
                         <td><span id="detailTicketCreatedOn">{{leadDetail.addField1}}</span></td>
                     </tr>
                     <tr>
-                        <th>AddField2</th>
+                        <th>Address</th>
                         <td><span id="detailTicketEstimatedDuration">{{leadDetail.addField2}}</span></td>
                     </tr>
                     <tr>
-                        <th>AddField3</th>
+                        <th>Email</th>
                         <td><span id="detailTicketActualDuration">{{leadDetail.addField3}}</span></td>
                     </tr>
                     <tr>
